--- a/blog_page/index.html
+++ b/blog_page/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="page.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body>
@@ -19,12 +17,24 @@
       </div>
       <div class="header__menu col-md-6">
         <ul>
-          <li><a href="" title="">Home</a></li>
-          <li><a href="" title="">Service</a></li>
-          <li><a href="" title="">Portfolio</a></li>
-          <li><a href="" title="">Team</a></li>
-          <li><a href="" title="">Blog</a></li>
-          <li><a href="" title="">Contact</a></li>
+          <a href="#">
+            <li>Home</li>
+          </a>
+          <a href="#">
+            <li>Service</li>
+          </a>
+          <a href="#">
+            <li>Portfolio</li>
+          </a>
+          <a href="#">
+            <li>Team</li>
+          </a>
+          <a href="#">
+            <li>Blog</li>
+          </a>
+          <a href="#">
+            <li>Contact</li>
+          </a>
         </ul>
       </div> 
     </div>
@@ -35,6 +45,7 @@
     <p>Blog</p>
   </div>
   <!-- end banner -->
+  <!-- content ,sidebar -->
   <div class="container">
     <div class="row">
       <!-- content -->
@@ -227,7 +238,54 @@
           </div>
           <!-- end post content -->
         </div>
-        
+        <!-- pagination -->
+        <div class="row paginate">
+          <div class="col-md-2 post__date bg-light"></div>
+          <div class="col-md-10 post text-center text-secondary">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                <li class="page-item text-left">
+                  <a class="page-link border-0 d-flex justify-content-start align-items-center" href="#" aria-label="Previous">
+                    <span aria-hidden="true">
+                      <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">1</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">2</a></li>
+                <li class="page-item"><a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">3</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">4</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">5</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">6</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">...</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link border-0 d-flex justify-content-center align-items-center" href="#">78</a>
+                </li>
+                <li class="page-item text-right">
+                  <a class="page-link border-0 d-flex justify-content-end align-items-center" href="#" aria-label="Next">
+                    <span aria-hidden="true">
+                      <i class="fas fa-chevron-right"></i>
+                    </span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
       <!-- end content -->
       <!-- sidebar -->
@@ -237,7 +295,7 @@
             <input type="text" class="form-control input--no-border" placeholder="Search" aria-label="" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary btn-search" type="button" id="button-addon2">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search text-secondary"></i>
               </button>
             </div>
           </div>
@@ -245,16 +303,16 @@
         <!-- follow us -->
         <div class="follow-us sidebar--margin-top">
           <p class="sidebar__title">Follow Us</p>
-          <div class="btn-group" role="group" aria-label="">
-            <button type="button" class="rounded-circle btn btn-secondary btn-group__item btn-facebook">
+          <div class="btn-group icon-group" role="group" aria-label="">
+            <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-facebook">
               <i class="fab fa-facebook-f"></i>
-            </button>
-            <button type="button" class="rounded-circle btn btn-secondary btn-group__item btn-twiter">
+            </a>
+            <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-twiter">
               <i class="fab fa-twitter"></i>
-            </button>
-            <button type="button" class="rounded-circle btn btn-secondary btn-group__item btn-google">
-              <i class="fab fa-facebook-f"></i>
-            </button>
+            </a>
+            <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-google">
+              <i class="fab fa-google-plus-g"></i>
+            </a>
           </div>
           <div class="sidebar--margin-top">
             <input type="text" class="form-control input--no-border input--email" name="" value="" placeholder="Enter Your email">
@@ -269,30 +327,43 @@
           <p class="sidebar__title ">Categories</p>
           <div>
             <ul class="list-group">              
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
               </li>
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
-              </li>
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
-              </li>
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
-              </li>
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
-              </li>
-              <li class="list-group-item ">
-                <i class="fas fa-chevron-right"></i>
-                <span>A simple primary list lorem</span>
-              </li>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
+              <a href="#">
+                <li class="list-group-item ">
+                  <i class="fas fa-chevron-right"></i>
+                  <span>A simple primary list lorem</span>               
+                </li>               
+              </a>
             </ul>
           </div>
         </div>
@@ -301,7 +372,7 @@
         <div class="popular-post sidebar--margin-top">
           <p class="sidebar__title">Popular Post</p>
           <img src="images/img1.png" class="post__img" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, voluptates.</p>
+          <p class="popular-post__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, voluptates.</p>
           <div class="popular--date">
             <p>Sep 26,2013</p>
             <span>
@@ -371,5 +442,26 @@
       <!-- end sidebar -->
     </div>
   </div>
+  <!-- end content, sidebar -->
+  <footer class="border-top">
+    <div class="icon-group btn-group d-flex justify-content-center align-items-center" role="group" aria-label="">
+      <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-twiter">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="#" class="rounded-circle btn btn-secondary btn-group__item btn-google">
+        <i class="fab fa-google-plus-g"></i>
+      </a>
+    </div>
+    <p class="btn-group d-flex justify-content-center align-items-center text-secondary">Copyright 
+      <span>
+        <i class="far fa-copyright text-secondary"></i>
+      </span> 
+    2013 Designed by cssauthor.com</p>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
